# iris-ssh-manager

./: .gitignore  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.sisyphus/evidence/: task-1-cargo-check.txt  task-1-scaffold-compiles.txt  task-10-sftp-summary.txt  task-11-tunnel-summary.txt  task-12-command-palette.txt  task-13-settings-summary.txt  task-14-build-output.txt  task-2-cargo-check.txt  task-3-cargo-check.txt  task-4-cargo-check.txt  task-5-layout.txt  task-6-connection-manager-summary.txt  task-7-terminal-bridge.txt  task-8-keychain-summary.txt  task-9-import-summary.txt
.sisyphus/evidence/final-qa/: summary.md
.sisyphus/notepads/iris-ssh-manager-exec/: learnings.md
scripts/: tauri-cli.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  iris-backup-2026-04-30 (1).json  iris-backup-2026-04-30.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: backup.rs  config.rs  connection.rs  git.rs  keychain.rs  local_terminal.rs  mod.rs  settings.rs  sftp.rs  snippets.rs  terminal.rs  tunnel.rs  updater.rs
src-tauri/src/config/: mod.rs  ssh_config.rs
src-tauri/src/db/: connections.rs  groups.rs  mod.rs  settings.rs  snippets.rs
src-tauri/src/db/migrations/: 001_create_connections.sql  002_create_groups.sql  003_create_settings.sql  004_create_snippets.sql  005_create_migrations.sql  006_add_snippet_scope.sql
src-tauri/src/keychain/: file_store.rs  mod.rs
src-tauri/src/ssh/: auth.rs  mod.rs  pool.rs  session.rs  sftp.rs  tunnel.rs
src/components/connections/: ConnectionCard.tsx  ConnectionForm.tsx  ConnectionList.tsx  GroupFolder.tsx  ImportDialog.tsx  QuickConnect.tsx
src/components/explorer/: CodeMirrorMiniEditor.tsx  FileEditor.tsx  FileExplorer.tsx
src/components/file-icons/: FileEntryIcon.tsx
src/components/layout/: CommandPalette.tsx  ErrorToast.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  UpdateNotification.tsx
src/components/review/: CodeDiffViewer.tsx  CodeReviewPanel.tsx  ReviewDiffTab.tsx
src/components/settings/: AppearanceSettings.tsx  BackupSettings.tsx  ConnectionsSettings.tsx  KeybindSettings.tsx  SettingsPage.tsx  TerminalSettings.tsx
src/components/sftp/: FileBrowser.tsx  FilePane.tsx  TransferQueue.tsx
src/hooks/: useLocalShell.ts  useSFTP.ts  useSSH.ts  useTerminalCopyPaste.ts  useTheme.ts  useTunnel.ts
src/lib/: dragTracking.ts  keybindings.ts  syntaxHighlight.tsx  tauri.ts  themes.ts
src/stores/: connectionStore.ts  settingsStore.ts  snippetStore.ts  splitStore.ts  terminalStore.ts  uiStore.ts
src/types/: connection.ts  git.ts  sftp.ts  snippet.ts  split.ts  terminal.ts  tunnel.ts
(+16 files in other folders)
